<resources>
    <string name="app_name">FS钱包</string>
    <string name="enterwalletmethods_str">你的第一个智能数字钱包</string>
    <string name="enterwalletmethods_createwallet">创建钱包</string>
    <string name="enterwalletmethods_loadwallet">导入钱包</string>
    <string name="walletname">钱包名称</string>
    <string name="walletpassword">密码（不小于8位）</string>
    <string name="confirmpassword">确认密码</string>
    <string name="passwordinfo">密码提示信息（可不填）</string>
    <string name="scan">扫一扫</string>
    <string name="paymentcode">收款码</string>
    <string name="share">分享</string>
    <string name="save">保存</string>
    <string name="deleteWallet">删除钱包</string>
    <string name="managerwallet">管理钱包</string>
    <string name="transrecords">交易记录</string>
    <string name="about">关于我们</string>
    <string name="notifications">通知</string>
    <string name="changePassword">修改密码</string>
    <string name="exportPrivateKey">导出私钥</string>
    <string name="exportKeystore">导出 Keystore</string>
    <string name="english">英语</string>
    <string name="simapleChinese">简体中文</string>
    <string name="settings">设置</string>
    <string name="language">多语言</string>
    <string name="profile">我</string>
    <string name="aboutUs">关于我们</string>
    <string name="currentVersion">当前版本：</string>
    <string name="checkUpdates">检测新版本</string>
    <string name="noUpdates">暂无新版本！</string>
    <string name="assets">资产</string>
    <string name="mnemonic">助记词</string>
    <string name="official">官方钱包</string>
    <string name="privateKey">私钥</string>
    <string name="copyWalletAddress">复制收款地址</string>
    <string name="transactionLog">最近交易记录</string>
    <string name="send">转账</string>
    <string name="receive">收款</string>
    <string name="balance">当前余额</string>
    <string name="Amount">转账金额</string>
    <string name="memo">备注</string>
    <string name="miningFee">矿工费用</string>
    <string name="slow">慢</string>
    <string name="fast">快</string>
    <string name="advance">高级选项</string>
    <string name="next">下一步</string>
    <string name="customGas">自定义Gas</string>
    <string name="customGasPrice">自定义Gas Price</string>
    <string name="data">十六进制数据</string>
    <string name="howto">如何设置参数</string>
    <string name="keystore">Keystore 文件</string>
    <string name="qrCode">二维码</string>
    <string name="copied">已复制</string>
    <string name="from">发款方</string>
    <string name="to">收款方</string>
    <string name="gasFee">矿工费用</string>
    <string name="copyUrl">复制URL</string>
    <string name="transactionTime">交易时间</string>
    <string name="block">区块</string>
    <string name="transaction">交易号</string>
    <string name="change">完成</string>
    <string name="currentPassword">当前密码</string>
    <string name="newPassword">新密码（不小于8位）</string>
    <string name="repeatPassword">重复新密码</string>
    <string name="l_import">马上导入</string>
    <string name="storeOffline">离线保存</string>
    <string name="stp">密码保险箱保存</string>
    <string name="uia">在安全环境下使用</string>
    <string name="fds">仅供直接扫码</string>
    <string name="ReceiverAddress">收款人地址</string>
    <string name="dtv">请勿使用网络传输</string>
    <string name="start_importing">开始导入</string>
    <string name="copyKeystory">复制 Keystore</string>
    <string name="iyl">如需在线保存，则建议使用安全等级更高的 1Password 等密码保管软件保存 keystore </string>
    <string name="fyl">忘记密码？导入助记词或私钥可重置密码。</string>
    <string name="gog">GasPrice或Gas不能为空</string>
    <string name="mwa">助记词，按空格分开</string>
    <string name="key_con">keystore 文本内容</string>
    <string name="key_pwd">keystore 密码</string>
    <string name="piy">请输入你的私钥 </string>
    <string name="fra">友情提示：地址一般为0x开头的42位字符</string>
    <string name="tad">本应用不存储密码，已无法帮您找回，请务必牢记</string>
    <string name="pru">密码用于保护私钥和交易授权，强度非常重要</string>
    <string name="gas_cost">GAS费用</string>
    <string name="relevant_concepts">相关概念</string>
    <string name="cap">直接复制粘贴钱包keystore文件内容至输入框，或者通过生成keystore内容的二维码，扫描录入。</string>
    <string name="pca">请复制粘贴 keystore 文件到安全、离线的地方保存。切勿保存至邮箱、记事本、网盘、聊天工具等，非常危险。</string>
    <string name="dnt">请勿通过网络工具传输 keystore 文件，一旦被黑客获取将造成不可挽回的资产损失。建议离线设备通过二维码扫描方式传输。</string>
    <string name="trq">二维码禁止保存、截图、以及拍照。仅供用户在安全环境下直接扫描来方便的导入钱包</string>
    <string name="puw">请在确保四周无人及无摄像头的情况下使用。二维码一旦被他人获取将造成不可挽回的资产损失。</string>
    <string name="applicationIntroduced">FS钱包 是一款移动端轻钱包APP，它旨在为普通用户提供一款安全放心，简单好用，功能强大的数字资产钱包应用。</string>
    <string name="oapc">"在一个公有链上, 任何人都可以读写数据。读取数据是免费的, 但是向公有链中写数据时需要花费一定费用的, 这种开销有助于阻止垃圾内容, 并通过支付保护其安全性。 网络上的任何节点(每个包含账本拷贝的连接设备被称作节点) 都可以参与称作挖矿的方式来保护网络。由于挖矿需要计算能力和电费, 所以矿工们的服务需要得到一定的报酬, 这也是矿工费的由来。\n
        \n矿工会优先打包 gas 合理，gas price 高的交易。如果用户交易时所支付的矿工费非常低, 那么这笔交易可能不会被矿工打包, 从而造成交易失败。\n\n本钱包的交易费用 (也是以太坊的交易费用) = gas 数量 * gas price (gas 单价, 以太币计价)\n\n"</string>

    <string name="wig">"什么是 gas ，什么是 gas price , 以及 data？\n\n在以太坊上，发送代币或调用智能合约，在区块链上执行写入操作，需要支付矿工计算费用，计费是按照 gas 计算的，gas 使用 ETH 来支付。无论您的调用的方法是成功还是失败，都需要支付计算费用。即使失败，矿工也验证并执行你的交易（计算），因此必须和成功交易一样支付矿工费。\n\n简单的说 gas limit 相当于汽车需要加多少汽油， gas price 相当于每升汽油的价格。\n\ngas limit 之所以称为限额，因为它是你愿意在一笔交易中花费 gas 的最大数量。交易所需的 gas 是通过调用智能合约执行多少代码来定义。 如果你不想花太多的 gas，通过降低 gas limit 将不会有太大的帮助。 因为你必须包括足够的gas 来支付的计算资源，否则由于gas 不够报错 Out of gas。所有未使用的 gas 将在转账结束时退还给您。 所以使用 imToken 发送1 ETH，并设置 gas limit 为 40万，转账结束后你会收到 400000 - 21000 gas 退还。\n\n通过降低 gas price可以节省矿工费用，但是也会减慢矿工打包的速度。矿工会优先打包 gas price 设置高的交易，如果你想加快转账，你可以把 gas price 设置得更高，这样你就可以排队靠前。如果你不急，你只需要设置一个安全的 gas price，矿工也会打包你的交易查看矿工可以接受的最低 gas price : http://ethgasstation.info/\n\nData 是可选项，用来调用合约。你需要把对应字符串转换成 16进制，工具：http://string-functions.com/string-hex.aspx ，填入十六进制数据（0x 开头）比如 makoshan 转换成 16 进制是 0x6d616b6f7368616e\n"</string>
</resources>
