<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/dp_20"
    android:paddingLeft="@dimen/dp_20"
    android:paddingRight="@dimen/dp_20">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storeOffline"
        android:textColor="@color/color_fa83bb"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"/>
    <TextView
        android:layout_marginTop="@dimen/dp_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pca"
        android:textColor="@color/color_989DA1"
        android:textSize="@dimen/sp_12"/>
    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_fa83bb"
        android:text="@string/dtv"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"/>
    <TextView
        android:layout_marginTop="@dimen/dp_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dnt"
        android:textColor="@color/color_989DA1"
        android:textSize="@dimen/sp_12"/>
    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stp"
        android:textColor="@color/color_fa83bb"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"/>
    <TextView
        android:layout_marginTop="@dimen/dp_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iyl"
        android:textColor="@color/color_989DA1"
        android:textSize="@dimen/sp_12"/>
    <TextView
        android:id="@+id/keystoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_12"
        android:padding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_30"
        android:background="@drawable/bg_importprivatekey"/>

    <TextView
        android:id="@+id/copyText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/white"
        android:text="@string/copyKeystory"
        android:gravity="center"
        android:background="@drawable/bg_createwallet_button"/>
</LinearLayout>