<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/dp_20">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fds"
        android:textColor="@color/color_fa83bb"
        android:textSize="@dimen/sp_14"
          android:textStyle="bold"/>
    <TextView
        android:layout_marginTop="@dimen/dp_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trq"
        android:textColor="@color/color_989DA1"
        android:textSize="@dimen/sp_12"/>
    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uia"
        android:textColor="@color/color_fa83bb"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"/>
    <TextView
        android:layout_marginTop="@dimen/dp_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puw"
        android:textColor="@color/color_989DA1"
        android:textSize="@dimen/sp_12"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/scan"
            android:layout_width="@dimen/dp_265"
            android:layout_height="@dimen/dp_265"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</LinearLayout>