<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@drawable/exittestbg">
        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:padding="@dimen/dp_10"
            android:layout_centerVertical="true"
            android:src="@mipmap/js_images_common_backdark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:text="@string/changePassword"/>
        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:textColor="@color/color_989DA1"
            android:textSize="@dimen/sp_16"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/dp_20"
            android:text="@string/change"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/oldwalletpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:textSize="@dimen/sp_14"
        android:hint="@string/currentPassword"
        android:textColorHint="@color/color_DBE3E6"
        android:background="@drawable/exittestbg"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        android:textColor="@color/color_9DA1A4"/>
    <EditText
        android:id="@+id/walletpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:textSize="@dimen/sp_14"
        android:hint="@string/newPassword"
        android:textColorHint="@color/color_DBE3E6"
        android:background="@drawable/exittestbg"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        android:textColor="@color/color_9DA1A4"/>
    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:textSize="@dimen/sp_14"
        android:hint="@string/repeatPassword"
        android:textColorHint="@color/color_DBE3E6"
        android:background="@drawable/exittestbg"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        android:textColor="@color/color_9DA1A4"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/color_989DA1"
            android:textSize="@dimen/sp_12"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/fyl"/>
        <TextView
            android:id="@+id/loadwallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/color_fa83bb"
            android:textSize="@dimen/sp_12"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:paddingLeft="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20"
            android:text="@string/l_import"/>
    </LinearLayout>

</LinearLayout>