<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45">
        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:padding="@dimen/dp_10"
            android:layout_centerVertical="true"
            android:src="@mipmap/js_images_common_backdark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:text="@string/enterwalletmethods_createwallet"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#a83271"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"
            android:drawableLeft="@mipmap/abc_scrubber_control_off_mtrl_alpha"
            android:drawablePadding="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/pru"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"
            android:drawableLeft="@mipmap/abc_scrubber_control_off_mtrl_alpha"
            android:drawablePadding="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/tad"/>
    </LinearLayout>
    <EditText
        android:id="@+id/walletname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:textSize="@dimen/sp_14"
        android:hint="@string/walletname"
        android:textColorHint="@color/color_DBE3E6"
        android:background="@drawable/exittestbg"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        android:textColor="@color/color_9DA1A4"/>
    <EditText
        android:id="@+id/walletpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:textSize="@dimen/sp_14"
        android:hint="@string/walletpassword"
        android:textColorHint="@color/color_DBE3E6"
        android:background="@drawable/exittestbg"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        android:textColor="@color/color_9DA1A4"/>
    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:textSize="@dimen/sp_14"
        android:hint="@string/confirmpassword"
        android:textColorHint="@color/color_DBE3E6"
        android:background="@drawable/exittestbg"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:inputType="textPassword"
        android:textColor="@color/color_9DA1A4"/>
    <EditText
        android:id="@+id/passwordinfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:textSize="@dimen/sp_14"
        android:hint="@string/passwordinfo"
        android:textColorHint="@color/color_DBE3E6"
        android:background="@drawable/exittestbg"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:textColor="@color/color_9DA1A4"/>
    <TextView
        android:id="@+id/createwallet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:textSize="@dimen/sp_14"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/enterwalletmethods_createwallet"
        android:background="@drawable/bg_createwallet_button"/>
    <TextView
        android:id="@+id/loadwallet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/enterwalletmethods_loadwallet"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color_fa83bb"
        android:background="@color/tranlate"/>

</LinearLayout>