<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/exittestbg">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:src="@mipmap/js_images_common_backdark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:textSize="@dimen/sp_18"
            android:text="@string/language"/>
        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:textColor="@color/color_fa83bb"
            android:text="@string/save"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/dp_20"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/sp_18"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/simapleChinese"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:text="@string/simapleChinese"
        android:gravity="center_vertical"
        android:textColor="@color/color_956636C"
        android:textSize="@dimen/sp_16"
        android:background="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/dp_20"
        android:background="@color/color_E1E1E1"/>
    <TextView
        android:id="@+id/english"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:text="@string/english"
        android:gravity="center_vertical"
        android:textColor="@color/color_956636C"
        android:textSize="@dimen/sp_16"
        android:background="@color/white"/>
</LinearLayout>