<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <TextView
        android:id="@+id/passwordinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_14"
        android:text="@string/cap"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:textColor="@color/color_9DA1A4"/>
    <EditText
        android:id="@+id/mneminic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_90"
        android:textSize="@dimen/sp_14"
        android:hint="@string/key_con"
        android:textColorHint="@color/color_DBE3E6"
        android:background="@drawable/exittestrectanglebg"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="top"
        android:padding="@dimen/dp_10"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        android:textColor="@color/color_9DA1A4"/>
    <EditText
        android:id="@+id/keystorePwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:textSize="@dimen/sp_14"
        android:hint="@string/key_pwd"
        android:singleLine="true"
        android:textColorHint="@color/color_DBE3E6"
        android:background="@drawable/exittestbg"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        android:textColor="@color/color_9DA1A4"/>
    <TextView
        android:id="@+id/loadwallet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/white"
        android:text="@string/start_importing"
        android:gravity="center"
        android:background="@drawable/bg_createwallet_button"/>
</LinearLayout>